eks-up-and-running/eks-traefik/svc-admin.yml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-admin
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 8080
      name: admin
